<resources>
    <string name="app_name">MathdokuSolver</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="plus">\u002B</string>
    <string name="times">\u00D7</string>
    <string name="div">\u00F7</string>
    <string name="minus">\u2212</string>
    <string name="Cancel">Close</string>
    <string name="equals"></string>
    <string name="undo">\u2326</string>
    <string name="ALLDIFF"></string>

    <string name="x4">4 x 4</string>
    <string name="x5">5 x 5</string>
    <string name="x6">6 x 6</string>
    <string name="x7">7 x 7</string>
    <string name="x8">8 x 8</string>
    <string name="x9">9 x 9</string>

    <string name="GRID_SELECT">Select Grid Size</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>



</resources>
