<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table_layout"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">
    <TableRow android:paddingBottom="16dp"
        android:weightSum="8">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_span="3"
            android:layout_gravity="center_vertical"
            >


        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAlignment="center"
            android:id="@+id/dialogTextView"

            />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/material_blue_grey_800"
                android:layout_alignBottom="@id/dialogTextView"/>


        </RelativeLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/dialogButtonUndo"
            android:layout_column="2"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher"
            android:hapticFeedbackEnabled="true"
            />
    </TableRow>

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="24sp"
            android:id="@+id/dialogButton1"
            android:layout_column="0"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            android:id="@+id/dialogButton2"
            android:layout_column="1"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            android:id="@+id/dialogButton3"
            android:layout_column="2"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="24sp"
            android:id="@+id/dialogButton4"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="0"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="24sp"
            android:id="@+id/dialogButton5"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="1"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="24sp"
            android:id="@+id/dialogButton6"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="2"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/dialogButton7"
            android:textSize="24sp"
            android:layout_column="0"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            android:id="@+id/dialogButton8"
            android:layout_column="1"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="24sp"
            android:id="@+id/dialogButton9"
            android:layout_column="2"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="24sp"
            android:id="@+id/dialogButton0"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="0"
            android:layout_span="0"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_weight="1"

            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:src="@mipmap/trash"
            android:background="@android:color/transparent"
            android:layout_column="2"
            android:layout_weight="1"
             />



    </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/table_layout"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="64dp"
            android:text="@string/plus"
            android:id="@+id/dialogButtonPlus"
            android:textSize="32sp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/material_deep_teal_500"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hapticFeedbackEnabled="true"
            />

        <Button
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/times"
            android:textSize="32sp"
            android:id="@+id/dialogButtonTimes"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/material_deep_teal_500"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:hapticFeedbackEnabled="true"
             />

        <Button
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:textSize="32sp"
            android:id="@+id/dialogButtonMinus"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/material_deep_teal_500"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:hapticFeedbackEnabled="true"
             />

        <Button
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/div"
            android:textSize="32sp"
            android:id="@+id/dialogButtonDiv"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/material_deep_teal_500"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:hapticFeedbackEnabled="true"
            />
    </LinearLayout>

</RelativeLayout>